[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/UI/LootPanel.gd" type="Script" id=1]
[ext_resource path="res://Themes/20Theme.tres" type="Theme" id=3]
[ext_resource path="res://Icons/Button_Up_Texture.png" type="Texture" id=5]
[ext_resource path="res://Icons/Button_Pressed_Texture.png" type="Texture" id=6]
[ext_resource path="res://Icons/MenuBackground.png" type="Texture" id=7]
[ext_resource path="res://Themes/35Theme.tres" type="Theme" id=9]
[ext_resource path="res://Icons/ItemIconBackground.png" type="Texture" id=10]

[node name="LootPanel" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -290.0
margin_top = -183.0
margin_right = 322.0
margin_bottom = 216.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[node name="LootPanelConainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftMargin" type="Label" parent="LootPanelConainer"]
margin_right = 10.0
margin_bottom = 399.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3

[node name="MainNodes" type="VBoxContainer" parent="LootPanelConainer"]
margin_left = 14.0
margin_right = 598.0
margin_bottom = 399.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMargin" type="Label" parent="LootPanelConainer/MainNodes"]
margin_right = 584.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 1

[node name="Items" type="ScrollContainer" parent="LootPanelConainer/MainNodes"]
margin_top = 24.0
margin_right = 584.0
margin_bottom = 277.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemsContainer" type="VBoxContainer" parent="LootPanelConainer/MainNodes/Items"]
margin_right = 572.0
margin_bottom = 620.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Loot1" type="HBoxContainer" parent="LootPanelConainer/MainNodes/Items/ItemsContainer" groups=[
"LootPanelSlots",
]]
margin_right = 572.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
theme = ExtResource( 9 )

[node name="ItemBackground" type="TextureRect" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot1"]
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 10 )

[node name="ItemButton" type="TextureButton" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot1/ItemBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 62, 62 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot1/ItemBackground/ItemButton"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -36.0
margin_top = -21.0
margin_right = 36.0
margin_bottom = 3.0
rect_min_size = Vector2( 65, 10 )
theme = ExtResource( 3 )
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot1"]
margin_left = 104.0
margin_right = 572.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
valign = 1

[node name="Loot2" type="HBoxContainer" parent="LootPanelConainer/MainNodes/Items/ItemsContainer" groups=[
"LootPanelSlots",
]]
margin_top = 104.0
margin_right = 572.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
theme = ExtResource( 9 )

[node name="ItemBackground" type="TextureRect" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot2"]
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 10 )

[node name="ItemButton" type="TextureButton" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot2/ItemBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot2/ItemBackground/ItemButton"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -34.0
margin_bottom = 1.0
rect_min_size = Vector2( 65, 35 )
theme = ExtResource( 3 )
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot2"]
margin_left = 104.0
margin_right = 572.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
valign = 1

[node name="Loot3" type="HBoxContainer" parent="LootPanelConainer/MainNodes/Items/ItemsContainer" groups=[
"LootPanelSlots",
]]
margin_top = 208.0
margin_right = 572.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
theme = ExtResource( 9 )

[node name="ItemBackground" type="TextureRect" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot3"]
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 10 )

[node name="ItemButton" type="TextureButton" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot3/ItemBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot3/ItemBackground/ItemButton"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -34.0
margin_bottom = 1.0
rect_min_size = Vector2( 65, 35 )
theme = ExtResource( 3 )
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot3"]
margin_left = 104.0
margin_right = 572.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
valign = 1

[node name="Loot4" type="HBoxContainer" parent="LootPanelConainer/MainNodes/Items/ItemsContainer" groups=[
"LootPanelSlots",
]]
margin_top = 312.0
margin_right = 572.0
margin_bottom = 412.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
theme = ExtResource( 9 )

[node name="ItemBackground" type="TextureRect" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot4"]
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 10 )

[node name="ItemButton" type="TextureButton" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot4/ItemBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot4/ItemBackground/ItemButton"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -34.0
margin_bottom = 1.0
rect_min_size = Vector2( 65, 35 )
theme = ExtResource( 3 )
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot4"]
margin_left = 104.0
margin_right = 572.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
valign = 1

[node name="Loot5" type="HBoxContainer" parent="LootPanelConainer/MainNodes/Items/ItemsContainer" groups=[
"LootPanelSlots",
]]
margin_top = 416.0
margin_right = 572.0
margin_bottom = 516.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
theme = ExtResource( 9 )

[node name="ItemBackground" type="TextureRect" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot5"]
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 10 )

[node name="ItemButton" type="TextureButton" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot5/ItemBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot5/ItemBackground/ItemButton"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -34.0
margin_bottom = 1.0
rect_min_size = Vector2( 65, 35 )
theme = ExtResource( 3 )
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot5"]
margin_left = 104.0
margin_right = 572.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
valign = 1

[node name="Loot6" type="HBoxContainer" parent="LootPanelConainer/MainNodes/Items/ItemsContainer" groups=[
"LootPanelSlots",
]]
margin_top = 520.0
margin_right = 572.0
margin_bottom = 620.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
theme = ExtResource( 9 )

[node name="ItemBackground" type="TextureRect" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot6"]
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 10 )

[node name="ItemButton" type="TextureButton" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot6/ItemBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot6/ItemBackground/ItemButton"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -34.0
margin_bottom = 1.0
rect_min_size = Vector2( 65, 35 )
theme = ExtResource( 3 )
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot6"]
margin_left = 104.0
margin_right = 572.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
valign = 1

[node name="Buttons" type="HBoxContainer" parent="LootPanelConainer/MainNodes"]
margin_top = 281.0
margin_right = 584.0
margin_bottom = 381.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
theme = ExtResource( 9 )

[node name="LootAll" type="ColorRect" parent="LootPanelConainer/MainNodes/Buttons"]
margin_right = 290.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 1, 1, 0 )

[node name="LootAllButton" type="TextureButton" parent="LootPanelConainer/MainNodes/Buttons/LootAll"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LootAllLabel" type="Label" parent="LootPanelConainer/MainNodes/Buttons/LootAll"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.948
margin_right = 1.948
text = "Loot All"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="ColorRect" parent="LootPanelConainer/MainNodes/Buttons"]
margin_left = 294.0
margin_right = 584.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 1, 1, 0 )

[node name="CloseButton" type="TextureButton" parent="LootPanelConainer/MainNodes/Buttons/Close"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseLabel" type="Label" parent="LootPanelConainer/MainNodes/Buttons/Close"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Close"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomMargin" type="Label" parent="LootPanelConainer/MainNodes"]
margin_top = 385.0
margin_right = 584.0
margin_bottom = 399.0
rect_min_size = Vector2( 0, 10 )
size_flags_vertical = 1

[node name="RightMargin" type="Label" parent="LootPanelConainer"]
margin_left = 602.0
margin_right = 612.0
margin_bottom = 399.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3
[connection signal="button_down" from="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot1/ItemBackground/ItemButton" to="." method="_on_ItemButton_button_down" binds= [ 1 ]]
[connection signal="button_up" from="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot1/ItemBackground/ItemButton" to="." method="_on_ItemButton_button_up" binds= [ 1 ]]
[connection signal="button_down" from="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot2/ItemBackground/ItemButton" to="." method="_on_ItemButton_button_down" binds= [ 2 ]]
[connection signal="button_up" from="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot2/ItemBackground/ItemButton" to="." method="_on_ItemButton_button_up" binds= [ 2 ]]
[connection signal="button_down" from="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot3/ItemBackground/ItemButton" to="." method="_on_ItemButton_button_down" binds= [ 3 ]]
[connection signal="button_up" from="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot3/ItemBackground/ItemButton" to="." method="_on_ItemButton_button_up" binds= [ 3 ]]
[connection signal="button_down" from="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot4/ItemBackground/ItemButton" to="." method="_on_ItemButton_button_down" binds= [ 4 ]]
[connection signal="button_up" from="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot4/ItemBackground/ItemButton" to="." method="_on_ItemButton_button_up" binds= [ 4 ]]
[connection signal="button_down" from="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot5/ItemBackground/ItemButton" to="." method="_on_ItemButton_button_down" binds= [ 5 ]]
[connection signal="button_up" from="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot5/ItemBackground/ItemButton" to="." method="_on_ItemButton_button_up" binds= [ 5 ]]
[connection signal="button_down" from="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot6/ItemBackground/ItemButton" to="." method="_on_ItemButton_button_down" binds= [ 6 ]]
[connection signal="button_up" from="LootPanelConainer/MainNodes/Items/ItemsContainer/Loot6/ItemBackground/ItemButton" to="." method="_on_ItemButton_button_up" binds= [ 6 ]]
[connection signal="button_up" from="LootPanelConainer/MainNodes/Buttons/LootAll/LootAllButton" to="." method="_on_LootAllButton_button_up"]
[connection signal="button_up" from="LootPanelConainer/MainNodes/Buttons/Close/CloseButton" to="." method="_on_CloseButton_button_up"]
